# DLW-1

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DLW-1.md  INSTRUCTION-FORMATS.md  README.md  SAMPLE-PROGRAM.md  assembly.ebnf  main.cpp
include/: cpu.h  emulator.h  instruction.h  memory.h  simulator.h
include/dlw1/: config.hpp  cpu.hpp  emulator.hpp  instruction.hpp  memory.hpp
include/dlw1_assembler/: assembler.hpp  lexer.hpp  linestream.hpp  token.hpp
include/dlw1_emulator/: emulator.hpp  helpers.hpp  instruction.hpp  memory.hpp
include/logger/: logger.hpp
references/: test.c  test.s
resources/: sample_program.s
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/assembler/: CMakeLists.txt
src/dlw-1/: CMakeLists.txt  emulator.cpp  memory.cpp
src/dlw1/: CMakeLists.txt  config.cpp  cpu.cpp  emulator.cpp  instruction.cpp  memory.cpp
src/dlw1_assembler/: CMakeLists.txt  assembler.cpp  lexer.cpp  linestream.cpp  main.cpp  temp.cpp  token.cpp
src/dlw1_emulator/: CMakeLists.txt  config.cpp  cpu.cpp  emulator.cpp  instruction.cpp  main.cpp  memory.cpp
src/logger/: CMakeLists.txt  logger.cpp
tests/: CMakeLists.txt  cpu_test.cpp  lexer_test.cpp  memory_test.cpp
